runs/2025-02-28-13-08-23/logs/MANOR/build-success.log
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://p3m.dev/cran/__linux__/noble/latest
Bioconductor version 3.20 (BiocManager 1.30.25), R 4.4.2 (2024-10-31)
Installing package(s) 'MANOR'
also installing the dependency ‘GLAD’

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/GLAD_2.70.0.tar.gz'
Content type 'application/x-gzip' length 1369592 bytes (1.3 MB)
==================================================
downloaded 1.3 MB

trying URL 'https://bioconductor.org/packages/3.20/bioc/src/contrib/MANOR_1.78.0.tar.gz'
Content type 'application/x-gzip' length 1550078 bytes (1.5 MB)
==================================================
downloaded 1.5 MB

* installing *source* package ‘GLAD’ ...
** package ‘GLAD’ successfully unpacked and MD5 sums checked
** using staged installation
checking for pkg-config... /usr/bin/pkg-config
checking pkg-config is at least version 0.9.0... yes
checking for GSL... yes
GSL has been found on the operating system
operating system: Linux
configure: creating ./config.status
config.status: creating src/Makevars

src/Makevars file

PKG_LIBS = -lgsl -lgslcblas -lm 
PKG_CPPFLAGS = -I/usr/local/include

** libs
using C compiler: ‘gcc (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
using C++ compiler: ‘g++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c BkpInfo.cpp -o BkpInfo.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c HaarSeg.cpp -o HaarSeg.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c MoveBkp.cpp -o MoveBkp.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c OutliersGNL.cpp -o OutliersGNL.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c chrBreakpoints.cpp -o chrBreakpoints.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c cutree.cpp -o cutree.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c daglad.cpp -o daglad.o
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG -I/usr/local/include  -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Wformat-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -DR_NO_REMAP -c distance.cpp -o distance.o
distance.cpp: In function ‘void R_distance(double*, int*, int*, double*, int*, int*)’:
distance.cpp:238:7: error: ‘error’ was not declared in this scope; did you mean ‘perror’?
  238 |       error("distance(): invalid distance");
      |       ^~~~~
      |       perror
make: *** [/usr/local/lib/R/etc/Makeconf:204: distance.o] Error 1
ERROR: compilation failed for package ‘GLAD’
* removing ‘/mnt/library/GLAD’
ERROR: dependency ‘GLAD’ is not available for package ‘MANOR’
* removing ‘/mnt/library/MANOR’

The downloaded source packages are in
	‘/tmp/RtmpJQnSom/downloaded_packages’
Old packages: 'bslib', 'cli', 'curl', 'evaluate', 'httr2', 'jsonlite',
  'openssl', 'pillar', 'pkgbuild', 'processx', 'ps', 'purrr', 'R6', 'Rcpp',
  'rlang', 'sessioninfo', 'systemfonts', 'testthat', 'textshaping', 'tinytex',
  'xfun', 'zip', 'class', 'foreign', 'KernSmooth', 'MASS', 'Matrix', 'nlme',
  'nnet', 'rpart', 'spatial'
Warning messages:
1: In install.packages(...) :
  installation of package ‘GLAD’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘MANOR’ had non-zero exit status
Error: unexpected 'else' in "  else"
Execution halted

real	7m54.346s
user	0m7.687s
sys	0m4.151s
